<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <import type="android.view.View"/>
        <import type="java.util.Map"/>
        <variable
            name="item"
            type="sk.icicleworks.productssample.ui.productEditor.ProductEditorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.productEditor.ProductEditorFragment">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={item.productName}"
                    android:hint="@string/product_name"
                    android:maxLength="20"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={item.productShortDesc}"
                    android:hint="@string/short_description"
                    android:maxLength="50"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="500">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={item.productLongDesc}"
                    android:lines="2"
                    android:hint="@string/long_description"
                    android:maxLength="500"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/price_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/price"
                    android:text="@={item.productPrice}"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:transitionName="shared_fab" />

            <Button
                android:id="@+id/remove_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/red"
                android:text="@string/delete"
                android:drawableStart="@drawable/ic_delete_forever_black_24dp"
                android:visibility="@{item.editMode ? View.VISIBLE : View.GONE}"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>